Attempt to fix LH's `offscreen-images` failure
https://github.com/vtex-sites/base.store/runs/4874192262#:~:text=%E2%9C%98-,offscreen%2Dimages,-failure%20for%20maxLength
```
✘ offscreen-images failure for maxLength assertion
Defer offscreen images
```

By increasing the loading wrapper so the "You might also like" section is not in view (triggering the download of its product images).

--- a/src/styles/pages/plp.scss
+++ b/src/styles/pages/plp.scss
@@ -2,6 +2,15 @@
 
 .plp-wrapper { margin-top: var(--space-3); }
 
+// Temporary till we have skeletons.
+.plp-temp-data-loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 100px;
+}
+
 .plp-hero {
   width: 100%;
   margin-top: var(--space-3);
